correction double scroll

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
 .container-all {
+  margin: 0 auto;
   position: relative;
   min-height: 100vh;
   max-width: 425px;
@@ -6,15 +7,16 @@
   background-image: url("../assets/img/bgc1.jpg");
 
   //background-blend-mode: overlay;
-  background-position: center center;
+  background-position: -35% 55%;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100vh;
-  overflow-y: scroll;
+  background-attachment: fixed;
+  //height: 100vh;
+  //overflow-y: scroll;
 
   &__container-outlet {
-    min-height: calc(100vh - 70px);
-    overflow-y: scroll;
+    min-height: calc(100vh);
+    //overflow-y: scroll;
   }
 
   &__app-header {
