--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,10 @@
 
 @use "sass/themes/theme";
 
+body{
+  background-color: #c1cbae;
+}
+
 .disabled {
   background: $disabled !important;
   pointer-events: none;
